Vote endpoint and swaggr fixes
